[project]
name = "microenginewebhookspy"
version = "1.0.0"
description = "Exemplar microengine in python using webhooks"
readme = "README.md"
authors = [
    {name = "PolySwarm Developers", email = "info@polyswarm.io"},
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10,<4"
dependencies = [
    "Flask",
    "celery",
    "microengine-utils>=1.6.0",
    "polyswarm-artifact",
    "python-json-logger",
    "requests",
    "urllib3>=1.26.5",
]
license = "MIT"

[project.urls]
Homepage = "https://github.com/polyswarm/microengine-webhooks-py"

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "requests-mock",
]
gunicorn = [
    "gunicorn",
]
